--- a/Project14_LimitCharacters/LimitCharacters/Base.lproj/Main.storyboard
+++ b/Project14_LimitCharacters/LimitCharacters/Base.lproj/Main.storyboard
@@ -1,9 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,20 +19,20 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wTG-Hn-1ZX">
-                                <rect key="frame" x="0.0" y="550" width="600" height="50"/>
+                                <rect key="frame" x="0.0" y="617" width="375" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="140" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6tV-Ya-8Y5">
-                                        <rect key="frame" x="482" y="12" width="110" height="25"/>
+                                        <rect key="frame" x="257" y="12" width="110" height="25"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="110" id="ive-7b-9CP"/>
                                             <constraint firstAttribute="height" constant="25" id="uSe-ex-tYa"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                        <color key="textColor" red="0.3623116992" green="0.49714321160000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" red="0.3623116992" green="0.49714321160000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mEh-nE-Cdy">
@@ -64,7 +68,7 @@
                                         <state key="normal" image="Camera"/>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="mEh-nE-Cdy" firstAttribute="centerY" secondItem="c7L-aP-1L6" secondAttribute="centerY" id="0bj-ND-2eU"/>
                                     <constraint firstItem="6tV-Ya-8Y5" firstAttribute="centerY" secondItem="wTG-Hn-1ZX" secondAttribute="centerY" id="6yj-i0-YOQ"/>
@@ -80,49 +84,49 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nez-LK-7BR">
-                                <rect key="frame" x="20" y="20" width="86" height="41"/>
+                                <rect key="frame" x="16" y="20" width="86" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="86" id="Mon-il-hsp"/>
                                     <constraint firstAttribute="height" constant="41" id="gQu-WX-ch5"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Close">
-                                    <color key="titleColor" red="0.3623116992" green="0.49714321160000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.3623116992" green="0.49714321160000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="closeAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dwi-Bk-cRq"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cDp-b2-Z1A">
-                                <rect key="frame" x="494" y="20" width="86" height="41"/>
+                                <rect key="frame" x="273" y="20" width="86" height="41"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="86" id="Mrh-nW-dNB"/>
                                     <constraint firstAttribute="height" constant="41" id="zDN-4v-KZV"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <state key="normal" title="Tweet">
-                                    <color key="titleColor" red="0.40182891799999998" green="1" blue="0.81077250199999995" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="0.40182891799999998" green="1" blue="0.81077250199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emojiself avatar" translatesAutoresizingMaskIntoConstraints="NO" id="nCi-SV-5Gw">
-                                <rect key="frame" x="275" y="48" width="50" height="50"/>
+                                <rect key="frame" x="162.5" y="48" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="8MO-j2-axP"/>
                                     <constraint firstAttribute="height" constant="50" id="lPI-aG-c58"/>
                                 </constraints>
                             </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="VMI-0S-p2v">
-                                <rect key="frame" x="61" y="106" width="478" height="180"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="57" y="106" width="261" height="180"/>
+                                <color key="backgroundColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="180" id="XNX-3j-FsY"/>
                                 </constraints>
-                                <color key="textColor" red="0.3623116992" green="0.49714321160000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.3623116992" green="0.49714321160000002" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="cDp-b2-Z1A" secondAttribute="trailing" id="66S-IF-2Eb"/>
                             <constraint firstItem="cDp-b2-Z1A" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="6dH-aX-oyl"/>
